<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST115_PnpHorPos_e" Id="{e614e949-788f-4541-8448-ff229b39baa4}">
    <Declaration><![CDATA[TYPE ST115_PnpHorPos_e : ST110_PnpHorPos_e;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>