<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST115_PnpVerPos_e" Id="{949bd031-1192-4c4f-9995-08e1e24c3657}">
    <Declaration><![CDATA[
TYPE ST115_PnpVerPos_e : ST110_PnpVerPos_e;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>