<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST120_PnpVerPos_e" Id="{290db886-6dea-4013-879a-490c65826e3f}">
    <Declaration><![CDATA[TYPE ST120_PnpVerPos_e : ST110_PnpVerPos_e;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>